# CoWastewaterBot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  inspect.yml  pages.yml  poll.yml
data/: state.json
public/: feed.json  feed.xml  health.json  index.html  risk.json
src/cowastewater/: __init__.py  analysis.py  atproto_bot.py  cli.py  client.py  config.py  feeds.py  health.py  models.py  regions.py  risk.py  server.py  state.py
tests/: test_analysis.py  test_atproto.py  test_client.py  test_feeds.py  test_health.py  test_models.py  test_regions.py  test_risk.py  test_state.py
tests/fixtures/: sample_query.json
