[project]
name = "cowastewaterbot"
version = "0.1.0"
description = "An easier interface to Colorado (CDPHE) wastewater surveillance data: an MCP server for LLMs, with RSS and ATProto feeds to follow."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CoWastewaterBot contributors" }]
keywords = ["wastewater", "surveillance", "colorado", "cdphe", "mcp", "public-health"]

dependencies = [
    "httpx>=0.27",
    "mcp>=1.2.0",
    "python-dateutil>=2.9",
    "feedgen>=1.0",
]

[project.optional-dependencies]
# ATProto posting is optional — only needed to publish to Bluesky.
atproto = ["atproto>=0.0.55"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.6"]

[project.scripts]
# LLM-facing MCP server (stdio transport).
cowastewater-mcp = "cowastewater.server:main"
# Small CLI for introspection / running polls locally.
cowastewater = "cowastewater.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cowastewater"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
